Fixed image width on mobile

--- a/assets/built/tw.css
+++ b/assets/built/tw.css
@@ -1205,6 +1205,10 @@ video {
   max-width: 36rem;
 }
 
+.max-w-full {
+  max-width: 100%;
+}
+
 .shrink-0 {
   flex-shrink: 0;
 }
@@ -2015,6 +2019,14 @@ video {
 
   .lg\:w-screen {
     width: 100vw;
+  }
+
+  .lg\:w-auto {
+    width: auto;
+  }
+
+  .lg\:max-w-7xl {
+    max-width: 80rem;
   }
 
   .lg\:columns-3 {
